tests/compile_fail/try_into/surplus_attrs.stderr
error: Only a single attribute is allowed.
       For the top-level attribute, an additional `#[try_into(error(...))]` may be provided.
 --> tests/compile_fail/try_into/surplus_attrs.rs:3:1
  |
3 | #[try_into(foo)]
  | ^
